# exchcalfill

./: Cargo.toml  README.md
exchcalfill/: Cargo.toml
exchcalfill/src/: main.rs  model.rs  xml.rs
msswap/: Cargo.toml
msswap/src/: lib.rs  xot_ext.rs
sentyear/: Cargo.toml
sentyear/src/: exch.rs  main.rs
src/: main.rs  model.rs  ntlm.rs  xml.rs
