[package]
name = "exchcalfill"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = { version = "0.21" }
chrono = { version = "0.4" }
env_logger = { version = "0.10" }
ntlmclient = { version = "0.1" }
reqwest = { version = "0.11", features = ["cookies", "rustls-tls"] }
rpassword = { version = "7.2" }
rustls = { version = "0.21" }
serde = { version = "1.0", features = ["derive"] }
sxd-document = { version = "0.3.2" }
sxd-xpath = { version = "0.4" }
tokio = { version = "1.32", features = ["full"] }
toml = { version = "0.8" }
webpki = { version = "0.22" }
webpki-roots = { version = "0.25" }
