[package]
name = "exchcalfill"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = { version = "0.22" }
chrono = { version = "0.4" }
chrono-tz = { version = "0.10" }
env_logger = { version = "0.11" }
ntlmclient = { version = "0.1" }
reqwest = { version = "0.12", features = ["cookies", "rustls-tls"] }
rpassword = { version = "7.3" }
rustls = { version = "0.23" }
serde = { version = "1.0", features = ["derive"] }
sxd-document = { version = "0.3.2" }
sxd-xpath = { version = "0.4" }
tokio = { version = "1.41", features = ["full"] }
toml = { version = "0.8" }
webpki = { version = "0.22" }
webpki-roots = { version = "0.26" }
