[package]
name = "sentyear"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4" }
chrono-tz = { version = "0.10" }
env_logger = { version = "0.11" }
msswap = { path = "../msswap" }
reqwest = { version = "0.12", features = ["cookies", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
xot = { version = "0.31" }
tokio = { version = "1.47", features = ["full"] }
toml = { version = "0.9" }
